--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-hidden h-full bg-white">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <title>Vite App</title>
+    <title>MintGarden NFT Studio</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="h-full">
+    <div id="app" class="h-full">
+      <router-view></router-view>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
